Multi-Release JAR Files (17, 21 for unicorn-core)